MDL-40347 grade/report/grader: Fixes: Grade report does not highlight some cells properly.
Squashed commit of the following:

commit 2c2164a7e27bd2b81102251420892386e39edecc
Author: Mary Evans <lazydaisy@visible-expression.co.uk>
Date:   Tue Aug 20 12:59:47 2013 +0100

    MDL-40347 theme: Modified upgrade.txt and created bootstrapbase/upgrade.txt.

commit 4449975a0f9249785ed152f63786bf7974c1776e
Author: Mary Evans <lazydaisy@visible-expression.co.uk>
Date:   Tue Aug 13 18:42:20 2013 +0100

    MDL-40347 grade/report/grader: added RTL css previously in bootstrapbase/less/moodle/grade.less to styles.css

commit b0af8f05a411b3dbb1d9c162a0d65c7f9c069c0f
Author: Mary Evans <lazydaisy@visible-expression.co.uk>
Date:   Tue Aug 13 12:42:02 2013 +0100

    MDL-40347_M26 grade/report/grader: cleaned up grade/report/grader/styles.css.

commit 52627137dc662d47cbfdf023d056baf102f29d8a
Author: Mary Evans <lazydaisy@visible-expression.co.uk>
Date:   Sat Jul 6 17:15:12 2013 +0100

    MDL-40347 grade/report/grader: Grade report does not highlight some cells properly.

    Merged/squashed original commit by Marina Glancy who:
    - added class 'i123' to each cell in the column
    - changed JS to highlight the cells with this class instead that cells with the column number
    - changed grade report css so the .vmarked and .hmarked classes have higher priority for all rows
    - made cells in 'average range' row td instead of th
    - little corrections to css: removed background image for some cells with .header css class
    - MyMobile theme disabled cells highlighting, make sure it disables it in all cases

    Merged/squashed original commit Mary Evans who:
    - removed theme/bootstrapbase/less/moodle/grade.less
    - removed @import "moodle/grade"; from bootstrapbase/less/moodle.less
    - removed reference to plugins_exclude_sheets for grader in both bootstrapbase/config.php and clean themes/config.php
    - commented out .hidden from bootstrapbase/less/bootstrap/responsive_

--- a/grade/report/grader/styles.css
+++ b/grade/report/grader/styles.css
@@ -23,6 +23,9 @@ table#user-grades .catlevel2 {
 background-color:#f9f9f9;
 }
 
+table#user-grades tr.range td.cell {
+    font-weight: 700;
+}
 table#user-grades tr.avg td.cell {
 background-color:#efefff;
 font-weight:700;
@@ -53,6 +56,9 @@ background-color:#efefef;
 background-image:none;
 }
 
+table#user-grades tr.even th.header {
+    background-image: none;
+}
 table#user-grades tr.groupavg td.cell {
 background-color:#efffef;
 font-weight:700;
@@ -132,12 +138,12 @@ border-width:1px 1px 0;
 table#user-grades th.user {
 text-align:left;
 border-style:solid;
-border-width:0 0 1px;
+border-width:1px 0;
 }
 
 table#user-grades th.userfield {
 border-style:solid;
-border-width:0 0 1px 1px;
+border-width:1px;
 }
 
 table#user-grades th.categoryitem,
@@ -497,25 +503,27 @@ background-color:#efefef;
 
 table#user-grades td.vmarked,
 table#user-grades tr.odd td.vmarked,
-table#user-grades td.vmarked,
-table#user-grades tr.odd td.vmarked,
-table#user-grades tr.even td.vmarked {
+table#user-grades tr.avg td.vmarked,
+table#user-grades tr.controls td.vmarked,
+table#user-grades .catlevel1.vmarked,
+table#user-grades .catlevel2.vmarked,
+table#user-grades .catlevel3.vmarked,
+table#user-grades tr.range td.vmarked,
+table#user-grades tr.groupavg td.vmarked {
 background-color:#fc3;
 }
 
 table#user-grades td.hmarked,
 table#user-grades tr.odd td.hmarked,
-table#user-grades td.hmarked,
-table#user-grades tr.odd td.hmarked,
-table#user-grades tr.even td.hmarked {
+table#user-grades tr.even td.hmarked,
+table#user-grades tr.odd th.hmarked,
+table#user-grades tr.even th.hmarked {
 background-color:#ff9;
 }
 
 table#user-grades td.hmarked.vmarked,
 table#user-grades tr.odd td.hmarked.vmarked,
-table#user-grades td.hmarked.vmarked,
-table#user-grades tr.even td.hmarked.vmarked,
-table#user-grades tr.odd td.hmarked.vmarked {
+table#user-grades tr.even td.hmarked.vmarked {
 background-color:#fc9;
 }
 
@@ -545,11 +553,9 @@ text-align:right;
     overflow:auto;
 }
 
-.path-grade-report-grader table tr.avg td.cell,
 table#user-grades td.controls,
-.path-grade-report-grader table tr.avg,
-.path-grade-report-grader table tr.avg td,
-.path-grade-report-grader table tr.avg th {
+.path-grade-report-grader table tr.avg .cell,
+.path-grade-report-grader table tr.range .cell {
 background-color:#f3ead8;
 }
 
@@ -640,4 +646,20 @@ position:absolute;
 
 .path-grade-report-grader.ie6 .excludedfloater {
 font-size:7px;
+}
+
+/** MDL-40071 **/
+.path-grade-report-grader.dir-rtl table th.user,
+.path-grade-report-grader.dir-rtl table td.userfield {
+    text-align: right;
+}
+
+/** MDL-40180 **/
+.dir-rtl table#user-grades th.category,
+.dir-rtl table#user-grades th#studentheader,
+.dir-rtl table#user-grades th.user {
+    text-align: right;
+}
+.path-grade-report-grader.dir-rtl th.user img.userpicture {
+    margin-left: 0.5em;
 }
